# EX06-Partition

./: CMakeLists.txt  README.md
include/: algorithm.h
src/: main.cc  partition_unittest.cc
